# Historia-chat

./: .gitignore  README.md  SECURITY.md  main.py  project.excalidraw  pyproject.toml  schema.py
app/: main.py
app/database/: crud.py  database.py  models.py  schemas.py
app/security/: authentication.py  hash_password.py  hash_session.py
app/websocket/: manager.py
excalidraw/: 1.excalidraw  2.excalidraw  3.excalidraw  4.excalidraw  4_fixed_bugs.excalidraw  5.excalidraw  5_websocket_setup.excalidraw  6_user_interface.excalidraw  7_chat_logic.excalidraw  8_fix_bugs.excalidraw  9.excalidraw
tests/: test_app_imports.py  test_chat_creation.py  test_websocket_message_storage.py
